update webgl frontend

--- a/frontend/surface-calibration.html
+++ b/frontend/surface-calibration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VolaSurfer - Welcome</title>
+    <title>VolaSurfer - Surface Calibration</title>
     <style>
       * {
         margin: 0;
@@ -108,10 +108,10 @@
         <a href="historical-surfaces.html" class="nav-button">
           📈 Historical Surfaces
         </a>
-        <a href="app.html" class="nav-button">
+        <a href="index.html" class="nav-button">
           🚀 Launch App
         </a>
       </div>
     </div>
   </body>
-</html>
+</html> 
